# roguelike

./: .gitignore  CMakeLists.txt  Makefile  README.md  ai.cpp  ai.h  armour.cpp  armour.h  buff.cpp  buff.h  character.cpp  character.h  display.cpp  display.h  effect.cpp  effect.h  floor.cpp  floor.h  floortile.cpp  game.h  hand.cpp  hand.h  item.cpp  item.h  main.cpp  misc.h  race.cpp  race.h  resistance.cpp  resistance.h  shield.cpp  shield.h  test.cpp  thing.cpp  thing.h  weapon.cpp  weapon.h
Debug/: build_debug.sh
Release/: build_release.sh
